[package]
name = "ntlm-hash"
version = "0.1.0"
edition = "2021"
authors = ["Ratopoka"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Lightweight ntlm hash implementation"
keywords = ["hash", "hashing", "digest", "ntlm"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
